[package]
name = "gonimo-p2p-back"
version = "0.1.0"
authors = ["Robert Klotzner <robert.klotzner@gmx.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p-mdns = "0.16.0"
tokio = { version="0.2.13", features = [ "full" ] }
libp2p = "0.16.2"
