[package]
name = "gonimo-p2p-back"
version = "0.1.0"
authors = ["Robert Klotzner <robert.klotzner@gmx.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p-mdns = { version = "0.22.0", path="../../rust-libp2p/protocols/mdns" }
tokio = { version="0.2.13", features = [ "full" ] }
libp2p = { version = "0.29.0", path = "../../rust-libp2p" }
pnet = "0.25.0"
parity-multiaddr = { version = "0.9.0", path="../../rust-libp2p/misc/multiaddr" }
pnet_datalink = "0.26.0"
